--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -2,6 +2,137 @@
 
 # Welcome to my Blog
 
+```
+│  intro.mdx
+│  
+├─01-Java
+│  ├─01-JavaBase
+│  │      annotation processor.md     
+│  │      Java上传文件.mdx
+│  │      lambda.mdx
+│  │      
+│  ├─02-Spring
+│  │      ApplicationContext.mdx      
+│  │      AspectJ形式AOP使用.mdx      
+│  │      BeanFactoryPostProcessor.mdx
+│  │      Bean的构造过程.mdx
+│  │      IoC注入方式1.mdx
+│  │      IoC注入方式2.mdx
+│  │      Joinpoint.mdx
+│  │      Spring AOP中的Advice.md
+│  │      Spring AOP中的Aspect.md
+│  │      Spring AOP中的Pointcut.md
+│  │      Spring AOP中的织入1.md
+│  │      Spring AOP中的织入2.md
+│  │      Spring-Core.mdx
+│  │      基于Schema的AOPA配置.mdx
+│  │
+│  ├─03-ProblemSummary
+│  │      github相关问题.mdx
+│  │      Java相关问题处理.mdx
+│  │      Oracle.mdx
+│  │
+│  ├─04-Interview
+│  │      Java-Case-Interview-one.mdx
+│  │      Java-Case-Interview-two.mdx
+│  │
+│  ├─05-ConcurrentAndJVM
+│  │      final域内存知识.mdx
+│  │      JAVA虚拟机.mdx
+│  │      JMM相关内容.mdx
+│  │      volatile域内存知识.mdx
+│  │      处理器内存模型.mdx
+│  │      锁.mdx
+│  │
+│  ├─06-DateBase
+│  │      Java-Case-Distribution.mdx
+│  │      MyBatis-Plus代码生成.mdx
+│  │      Mybatis-Plus快速开始.mdx
+│  │      mysql存储过程快速上手.mdx
+│  │      Oracle存储过程.mdx
+│  │      事务处理.mdx
+│  │
+│  └─07-DesignPattern
+│          设计模式.mdx
+│
+├─02-Frontend
+│      css.mdx
+│      github-page-blog.mdx
+│      image-1.pngx
+│      image-2.pngx
+│      image.pngx
+│      Integrate husky prettier etc.md
+│      JQuery-revese-selector.mdx
+│      pnpm.mdx
+│      uni-app.mdx
+│      vue-grammer-one.mdx
+│      vue-grammer-two.mdx
+│      vue-project-notes.mdx
+│      vue-route.mdx
+│      vue3入门.mdx
+│
+├─03-Algorithm
+│      Base-Sort.mdx
+│      Binary-Insert.mdx
+│      BubbleSort.mdx
+│      HeadSort.mdx
+│      InsertSort.mdx
+│      KMP.mdx
+│      LeetCode4的幂.mdx
+│      leetcode两个单链表两数相加.mdx
+│      LeetCode返回两个正序数组的中位数.mdx
+│      MergeSort.mdx
+│      QuickSort.mdx
+│      SelectSort.mdx
+│      ShellSort.mdx
+│
+├─04-Python
+│      常见问题.mdx
+│
+├─05-ReadBook
+│  ├─01-Computor theory
+│  │      OS_LeanNotes.md
+│  │      计算机组成原理.md
+│  │
+│  └─02-Literature
+│          周岭-认知觉醒-开启自我改变的原动力.mdx
+│
+├─06-CollectLinks
+│      useful_links.mdx
+│
+├─07-Container-Tech
+│  ├─docker
+│  │      Docker-Command-and-Dockerfile.mdx
+│  │      docker-compose-configure-redis-cluster-jenkins.mdx
+│  │      docker-配置国内镜像地址.mdx
+│  │      idea 部署.md
+│  │
+│  └─kubernetes
+│          CentOS8安装K8S.mdx
+│          k8s常用命令.mdx
+│
+├─08-Linux
+│      AWK-SED命令简单入门.mdx
+│      Common-Shell-Command.mdx
+│      vmware-centos8扩展或者缩容磁盘空间步骤.mdx
+│
+├─09-Develop-Tools
+│      dbeaver.mdx
+│      Everything使用.mdx
+│      史上最全git命令集.mdx
+│      正则.mdx
+│      配置gradle-maven.mdx
+│
+└─10-Others
+    ├─01-Windowns
+    │      command usage.md
+    │      software-use-case.mdx
+    │      win11-release-update.mdx
+    │
+    └─02-CnblogsThemeConfiguration
+            cnblogs-theme-silence主题设置简约风格.mdx
+            博客园SimpleMemory主题美化.mdx
+```
 
 :::tip 协议
 
