--- a/docs/02-Frontend/vue-route.mdx
+++ b/docs/02-Frontend/vue-route.mdx
@@ -12,7 +12,7 @@ sidebar_position: 6
 2. Install `pnpm` by following command, `npm install -g pnpm`
 3. Create a `vite vue3 ts` project, using `pnpm create vite-app my-vue3-ts-project`
 4. Install a editor tool, best recommend is VS-CODE, download from [here](https://code.visualstudio.com/)
-## Flick Project Construction
+## Preview Project Structure
 
 ![Project Construction](https://s2.loli.net/2023/12/31/gVRe8YzSbUWxjXO.png)
 
@@ -250,6 +250,6 @@ run the project with your script which define in `package.json`, then visit the 
 
 ## Conclusion
 
-In this use guide, maybe prone to make some spell mistakes and make something doesn’t worked, you’d better just copy the command, and paste in your VS-Code terminal, you can download the code from [my git hub repository](https://github.com/Halcyon666/taco-shop)
+In this user guide, there might be a tendency to make spelling mistakes or encounter issues with commands. It’s advisable to directly copy the commands and paste them into your VS Code terminal. You can download the code from my [GitHub Repository](https://github.com/Halcyon666/taco-shop)
 
-Thanks for your time, If you get something from my article, please give me clap, mean the while, feel free to ask question as you need.
+Thank you for your time. If you find value in my article, please give it a clap. Also, feel free to ask any questions you may have.
