--- a/docs/01-Java/01-JavaBase/file upload.mdx
+++ b/docs/01-Java/01-JavaBase/file upload.mdx
@@ -6,8 +6,7 @@ sidebar_position: 3
 
 ## Controller接口
 
-<details>
-	<summary>定义一个可以接收文件的Controller类</summary>
+定义一个可以接收文件的Controller类
 
 ```java
 package whalefall.filedownloadorup;
@@ -35,7 +34,6 @@ public class Test4HtmlController {
 }
 
 ```
-</details>
 
 ## 使用 Resttemplate 上传文件
 
