--- a/docs/01-Java/01-JavaBase/file upload.mdx
+++ b/docs/01-Java/01-JavaBase/file upload.mdx
@@ -40,8 +40,7 @@ public class Test4HtmlController {
 使用Spring-Boot 时集成Resttemplate 无需额外导包
 
 
-<details>
-	<summary>使用 Resttemplate FileSystemResource 单元测试代码</summary>
+使用 Resttemplate FileSystemResource 单元测试代码
 
 ```java
 package whalefall.filedownloadorup;
@@ -101,7 +100,6 @@ public class TestRestTemplateUpload {
 }
 
 ```
-</details>
 
 
 <details>
