更新 annotation processor.mdx

--- a/docs/01-Java/01-JavaBase/annotation processor.mdx
+++ b/docs/01-Java/01-JavaBase/annotation processor.mdx
@@ -2,7 +2,10 @@
 title: APT 使用
 sidebar_label: APT 使用
 sidebar_position: 2
+description: write a annotation processor and use in Java Project
+keywords: [APT, annotation usage, Java, APT used in Maven, APT used in Gradle]
 ---
+
 ## annotation-processor模块
 
 JAVA APT 基于注解处理器，本工程案例只是输出一些打印内容。
