--- a/docs/01-Java/02-Spring/AOP Configuration of Schema.mdx
+++ b/docs/01-Java/02-Spring/AOP Configuration of Schema.mdx
@@ -4,7 +4,7 @@ sidebar_label: 基于Schema的AOPA配置
 sidebar_position: 14
 ---
 
-本文相关代码(来自[官方源码](https://github.com/spring-projects/spring-framework.git "官方源码")spring-test模块)请参见[spring-framework](https://github.com/Halcyon666/spring-framework-modified/tree/main/spring-test) org.springframework.mylearntest包下。
+本文相关代码(来自[官方源码](https://github.com/spring-projects/spring-framework.git)spring-test模块)请参见[spring-framework](https://github.com/Halcyon666/spring-framework-modified/tree/main/spring-test) org.springframework.mylearntest包下。
 
 ## 基于Schema的AOP配置
 
