--- a/docs/01-Java/06-DateBase/Oracle Procedure.mdx
+++ b/docs/01-Java/06-DateBase/Oracle Procedure.mdx
@@ -99,7 +99,7 @@ END IF;
 END;
 ```
 
-使用`GRANT CREATE ANY TABLE TO <USER>`为用户赋予权限
+使用`GRANT CREATE ANY TABLE TO USER`为用户赋予权限
 
 ## 带有参数的存储过程
 在调用时，通过制定所需要的参数值，实现特定的功能。在创建时，还可以为参数制定默认值。存储过程一旦使用了参数，那么在执行存储过程时则要求必须为其制定参数，参数允许是常量、变量、表达式等。
