--- a/docs/07-Container-Tech/kubernetes/CentOS8 install K8S.mdx
+++ b/docs/07-Container-Tech/kubernetes/CentOS8 install K8S.mdx
@@ -26,7 +26,9 @@ sidebar_position: 1
 
 执行如下命令
 
-`yum list installed|grep docker | gawk -F ' ' '{ print $1 }' | xargs yum remove -y`
+```shell
+yum list installed | grep '^docker' | gawk -F ' ' '{ print $1 }' | xargs yum remove -y
+```
 
 ### 相关教程
 
