--- a/docs/01-Java/01-JavaBase/annotation processor.mdx
+++ b/docs/01-Java/01-JavaBase/annotation processor.mdx
@@ -2,8 +2,15 @@
 title: APT 使用
 sidebar_label: APT 使用
 sidebar_position: 2
-description: write a annotation processor and use in Java Project
-keywords: [APT, annotation usage, Java, APT used in Maven, APT used in Gradle]
+description: How to write a annotation processor and use in Java Project
+keywords:
+  - APT
+  - annotation usage
+  - Java
+  - APT used in Maven
+  - APT used in Gradle
+  - write a annotation processor
+  - use in Java Project
 ---
 
 ## annotation-processor模块
