--- a/docs/02-Frontend/vue route.mdx
+++ b/docs/02-Frontend/vue route.mdx
@@ -6,49 +6,48 @@ sidebar_position: 6
 
 # How to use `vue-route` in `vue3` ts project?
 
-**Before Beginning to do use `vue-route`, some requirement needs:**
+**Before Beginning to do `vue-route`, some requirements needs:**
 
-1. Install `Nodejs`, the official website is [here](https://nodejs.org/en), recommend even version like `16.xxx` and `18.xxx` 
-2. Install `pnpm` by following command, `npm install -g pnpm`
-3. Create a `vite vue3 ts` project, using `pnpm create vite-app my-vue3-ts-project`
-4. Install a editor tool, best recommend is VS-CODE, download from [here](https://code.visualstudio.com/)
+1.  Install `Nodejs`, the official website is [here](https://nodejs.org/en), recommend even version like `16.xxx` and `18.xxx` 
+2.  Install `pnpm` by following order, `npm install -g pnpm`
+3.  Create a `vite vue3 ts` project, using `pnpm create vite-app my-vue3-ts-project`
+4.  Install a editor tool, recommend is VS-CODE, download from [here](https://code.visualstudio.com/)
+
 ## Preview Project Structure
 
 ![Project Construction](https://s2.loli.net/2023/12/31/gVRe8YzSbUWxjXO.png)
 
-
-
 ## Install dependencies
 
 ```shell
-pnpm install vue-router@4.2.5
-pnpm install @vitejs/plugin-vue@5.0.2 -D
-pnpm install @types/node@20.10.6 -D 
-pnpm install @vue/tsconfig -D
+pnpm install vue-router4.2.5
+pm install @vitejs/plugin-vue@5.0.2 -D
+pnpm install @types/node20.10.6 -D 
+pm install @vue/ts config -D
 ```
 
-1. **`pnpm install vue-router@4.2.5`**:
+1.  **`pnpm install vue-router@4.2.5`**:
 
-   This command installs the Vue Router package at version 4.2.5.
+    This command installs the Vue Router package at version 4.2.5.
 
-   Vue Router is a library for Vue.js applications that enables navigation between different components, managing the application's URL, and providing a navigation history.
+    Vue Router is a library for Vue.js applications that enables navigation between different components, managing the application's URL, and providing a navigation history.
 
-2. **`pnpm install @vitejs/plugin-vue@5.0.2 -D`**:
-   This command installs the Vite plugin for Vue.js at version 5.0.2.
+2.  **`pnpm install @vitejs/plugin-vue@5.0.2-D`**:
+    This command installs the Vite plugins for Vue.js at version 5.0.2.
 
-   Vite is a build tool for modern web development that is particularly optimized for Vue.js. This plugin specifically integrates Vue.js with Vite, allowing you to use Vue components in your Vite projects.
+    Vite is a build tool for modern web development that is particularly optimized for Vue.js. This plugin specifically integrates Vue.js with Vite, allowing you to use Vue components in your Vite projects.
 
-3. **`pnpm install @types/node@20.10.6 -D`**:
+3.  **`pnpm install @types/node@20.10.6-D`**:
 
-   This command installs TypeScript type definitions for Node.js at version 20.10.6.
+    This command installs TypeScript type definitions for Node.js at version 20.10.6.
 
-   When working with TypeScript, having type definitions for the libraries you use is essential for static type checking. The `@types/node` package provides these definitions for Node.js.
+    When working with TypeScript, having defined types for the libraries you use is essential for regular type checks. The `@types/node` package provides these definitions for Node.js.
 
-4. **`pnpm install @vue/tsconfig -D`**:
+4.  **`pnpm install @vue/tsconfig -D`**:
 
-   This command installs the Vue.js TypeScript configuration package.
+    This command installs the Vue.js TypeScript configuration package.
 
-   The `@vue/tsconfig` package provides a default TypeScript configuration for Vue.js projects. It includes settings that are commonly used and recommended for Vue.js development. The configuration is typically referenced in the `tsconfig.json` file of your project with the "extends" property.
+    The `@vue/tsconfig` package provides a default TypeScript configuration for Vue.js projects. It includes settings that are commonly used and recommended for Vue. s development. The configuration is systematically referenced in the `tsconfig.json` file of your project with the "extents" property.
 
 ## Configure `tsconfig.json`
 
@@ -74,33 +73,29 @@ pnpm install @vue/tsconfig -D
 }
 ```
 
-**`extends: "@vue/tsconfig/tsconfig.json"`**:
+**\`extends: "@vue/tsconfig/tsconfig.json"**:
 
-- This line indicates that the current TypeScript configuration extends the settings from the `tsconfig.json` file provided by the `@vue/tsconfig` package. It's a way of inheriting a base configuration.
-
-
+-   This line indicates that the current TypeScript configuration extends the settings from the `tsconfig. son` file provided by the `@vue/tsconfig` package. It's a way of importing a base configuration.
 
 **`compilerOptions`**:
 
-- **`ignoreDeprecations": "5.0"`**: Specifies that the compiler should ignore deprecation warnings related to TypeScript version 5.0.
+-   **\`ignoreDepressions": "5.0"\`\`**: Specifications that the compiler should ignore predictions related to TypeScript version 5.0.
 
-- **`sourceMap": true`**: Generates source maps, which are useful for debugging TypeScript code in development environments.
+-   **`sourceMap": true`**: Generates source maps, which are useful for debugging TypeScript in development environments.
 
-- **`baseUrl": "."`**: Sets the base directory for resolving non-relative module names. In this case, it's set to the current directory.
+-   **\`baseUrl": "."**: Sets the base directory for resolving non-relative module names. In this case, it's set to the current directory.
 
-- **`paths`**: Configures module aliases for easier import statements. For example, `@/` is aliased to `./src/`, allowing you to write imports like `import Foo from '@/components/Foo.vue'`.
+-   **`paths`**: Configuration modules for easier import statements. For example, `@/` is aliased to `./src/`, allowing you to write imports like \`import Foo from @/components/Foo.vue'.
 
-- **`lib`: ["esnext", "dom"]**: Specifies the libraries that are available at runtime. `esnext` includes the latest ECMAScript features, and `dom` includes the DOM types.
-
-
+-   **`lib`: ["esnext", "dom"]**: Specifications the libraries that are available at runtime. \``esnext` includes the latest ECMAS features, and `dom` includes the DOM types.
 
 **`vueCompilerOptions`**:
 
-- **`nativeTags`: ["block", "component", "template", "slot"]**: Specifies which tags should be treated as native Vue.js tags. This is helpful for the Vue.js compiler to recognize certain custom elements in your Vue components.
+-   **`nativeTags`: ["block", "component", "template", "slot"]**: Specifications which tags should be treated as native Vue. s tags. This is helpful for the Vue.js compiles to recognize certain customized elements in your Vue components.
 
-- **`include`: ["src/**/*.ts", "src/**/*.d.ts", "src/**/\*.tsx", "src/**/*.vue"]**:
+-   **`include`: \["src/**/_.ts", "src/\*\*/_.d.ts", "src/**/\*.tsx", "src/**/\*.vue"]\*\*:
 
-    - Lists the files that should be included in the TypeScript compilation process. In this case, it includes TypeScript files (`*.ts`, `*.d.ts`, `*.tsx`) and Vue files (`*.vue`) within the `src` directory and its subdirectories.
+    -   Listers the files that should be included in the TypeScript compilation process. In this case, it includes TypeScript files (`*). s`, `*.d.ts`, `*.tsx` and Vue files (`*.vue`) within the `src` directory and its subdirectories.
 
 ## Configure `vite.config.mts`
 
@@ -123,19 +118,16 @@ export default defineConfig({
 
 **`export default defineConfig({`**:
 
-- Exports the configuration for the Vite project. The configuration is defined using the `defineConfig` function.
+-   Exports the configuration for the Vite project. The configuration is defined using the `defineConfig` function.
 
+**`resolve: LOs alias: LO'@: path.resoluve(_dirname, 'src') }`**:
 
-
-**`resolve: { alias: { '@': path.resolve(__dirname, 'src') } }`**:
-
-- Configures module aliasing for easier import statements. The `@` alias is set to point to the `src` directory, making it convenient to import files using `@/` as a prefix. For example, `import Foo from '@/components/Foo.vue';`.
-
-
+-   Configures module aliasing for easier import statements. The `@` alias is set to point to the `src` directory, making it conventive to import files using `@/` as a prefix. For example, `import Foo from @/components/Foo.vue';`.
 
 **`plugins: [vue()]`**:
 
-- Configures the Vite plugins for the project. In this case, it includes the Vue.js plugin initialized with `vue()`. This enables Vite to handle Vue single-file components during the build process.
+-   Configure the Vite plugins for the project. In this case, it includes the Vue.js plugins in initiated with `vue()`. This enabled Vite to handle Vue single-file components during the build process.
+
 ## Write `main.ts`
 
 ```ts
@@ -147,7 +139,7 @@ createApp(App).use(router).mount('#app')
 
 ```
 
-This code sets up a Vue.js application with a root component (`App`), uses the Vue Router plugin for navigation, and mounts the entire application to an HTML element with the ID 'app'. This is a common setup for Vue.js single-page applications where routing is managed by Vue Router, and the application is mounted to a specific DOM element.
+This code sets up a Vue. s application with a root component (`App`), uses the Vue Router plugin for navigation, and mounts the entire application to an HTML element with the ID 'app'. This is a common setup for Vue. s single-page applications where routing is managed by Vue Router, and the application is mounted to a specific DOM element.
 
 ## Write `App.vue`
 
@@ -161,7 +153,7 @@ This code sets up a Vue.js application with a root component (`App`), uses the V
 
 ```
 
-This `App.vue` component is designed to be the root component of a Vue.js application. It establishes the overall structure of the application by providing a root `<div>` with the ID "app" and includes a `<router-view>` element to handle the dynamic rendering of components based on the application's routes. This is a common structure for Vue.js single-page applications that use Vue Router for navigation.
+This `App.vue` component is designed to be the root component of a Vue.js application. It establishes the overall structure of the application by providing a root `<div>` with the ID `app` and includes a `<router-view>`movement to handle the dynamic of components based on the application's routes. This is a common structure for Vue.js single-page applications that use Vue Router for navigation.
 
 ## Write `route.ts`
 
@@ -190,37 +182,29 @@ export default router
 
 ```
 
-**`import { createRouter, createWebHistory } from 'vue-router';`**:
+**\`Import { createRouter, createWebHistory } from 'vue-router';**:
 
-- Import the `createRouter` and `createWebHistory` functions from the `vue-router` library. These functions are used to create a Vue Router instance.
+-   Import the `createRouter` and `createWebHistory` functions from the `vue-router` library. These functions are used to create a Vue Router instance.
 
+**\`Import { RouteRecordRaw } from 'vue-router';**:
 
+-   Import the `RouteRecordRaw` type from the `vue-router` library. This type is used to define route configurations.
 
-**`import type { RouteRecordRaw } from 'vue-router';`**:
+**`const routes: RouteRecordRaw[]= [...]`**:
 
-- Import the `RouteRecordRaw` type from the `vue-router` library. This type is used to define route configurations.
+-   Define an array of route configurations. In this example, there is a single route configuration for the home page (\`'/'). It specializes the name, component, and meta information (in this case, the title) for the route.
 
+**`const router = createRouter (LOhistory: createWebHistory(), routes });`**:
 
+-   Use the `createRouter` function to create a computer instance.
 
-**`const routes: RouteRecordRaw[] = [...]`**:
+-   The `history` option is set to `createWebHistory()`, indicating that the computer should use the web history API for navigation. This enabled cleaner URLs without cash fragments.
 
-- Define an array of route configurations. In this example, there is a single route configuration for the home page (`'/'`). It specifies the name, component, and meta information (in this case, the title) for the route.
-
-
-
-**`const router = createRouter({ history: createWebHistory(), routes });`**:
-
-- Use the `createRouter` function to create a router instance.
-
-- The `history` option is set to `createWebHistory()`, indicating that the router should use the web history API for navigation. This enables cleaner URLs without hash fragments.
-
-- The `routes` option is set to the array of route configurations defined earlier.
-
-
+-   The `routes` option is set to the array of route configurations defined earlier.
 
 **`export default router;`**:
 
-- Export the created router instance, making it available for use in other parts of the application.
+-   Export the created computer instance, making it available for use in other parts of the application.
 
 ## write `MyPage.vue`
 
@@ -238,18 +222,16 @@ const inputText = ref<string>('hello')
 
 ```
 
-This create a input text element, and bind the data to inputText variable, in the script-setup declare ref object refers to string 'hello'.
+This creates a input text element, and binds the data to inputText variable, in the script-setup declare ref object refers to string 'hello'.
 
 ## Access
 
-run the project with your script which define in `package.json`, then visit the url, your will see as below picture;
+run the project with your script which defines in `package.json`, then visit the url, your will see as below picture;
 
-![visited Page](https://s2.loli.net/2023/12/31/ONkqPXf6ejuAgBL.png)
-
-
+![Visited Page](https://s2.loli.net/2023/12/31/OkqPXf6ejuAgBL.png)
 
 ## Conclusion
 
-In this user guide, there might be a tendency to make spelling mistakes or encounter issues with commands. It’s advisable to directly copy the commands and paste them into your VS Code terminal. You can download the code from my [GitHub Repository](https://github.com/Halcyon666/taco-shop)
+In this user guide, there might be a tendency to make spelling misstakes or encounter issues with commands. It’s advisory able to directly copy the orders and paste them into your VS Code. You can download the code from my [GitHub Repository](https://github.com/Halcyon66/taco-shop)
 
-Thank you for your time. If you find value in my article, please give it a clap. Also, feel free to ask any questions you may have.
+Thank you for your time. If you find value in my article, please give it a clause. Also, feel free to ask any questions you may have.
