更新 vue route.mdx

--- a/docs/02-Frontend/vue route.mdx
+++ b/docs/02-Frontend/vue route.mdx
@@ -159,7 +159,7 @@ const inputText = ref<string>('hello')
 
 运行`pnpm dev`,在浏览器中访问`localhost:5173`
 
-![Visited Page](https://s2.loli.net/2023/12/31/OkqPXf6ejuAgBL.png)
+![visited Page](https://s2.loli.net/2023/12/31/ONkqPXf6ejuAgBL.png)
 
 ## 总结
 
