--- a/docs/02-Frontend/tailwind.mdx
+++ b/docs/02-Frontend/tailwind.mdx
@@ -13,6 +13,10 @@ pnpx tailwindcss -i ./src/style/input.css -o ./src/style/output.css --watch
 
 pnpm install -D tailwindcss postcss autoprefixer
 pnpx tailwindcss init -p --ts
+
+pnpm install -D postcss-nesting
+
+pnpm install -D autoprefixer
 ```
 
 
