--- a/docs/01-Java/03-ProblemSummary/github problems.mdx
+++ b/docs/01-Java/03-ProblemSummary/github problems.mdx
@@ -16,3 +16,24 @@ git config --global --unset http.proxy
 git config --global --unset https.proxy
 
 ```
+
+real time interactive
+
+```[url "https://ghproxy.com/https://github.com"]
+PS D:\project\taco-shop> git push
+fatal: unable to access 'https://github.com/Halcyon666/taco-shop.git/': Failed to connect to github.com port 443 after 21090 ms: Couldn't connect to server
+PS D:\project\taco-shop> git config --global --unset http.proxy
+PS D:\project\taco-shop> git push
+Enumerating objects: 19, done.
+Counting objects: 100% (19/19), done.
+Delta compression using up to 8 threads
+Compressing objects: 100% (11/11), done.
+Writing objects: 100% (11/11), 1.24 KiB | 1.24 MiB/s, done.
+Total 11 (delta 8), reused 0 (delta 0), pack-reused 0
+remote: Resolving deltas: 100% (8/8), completed with 7 local objects.
+To https://github.com/Halcyon666/taco-shop.git
+   2670324..332beb2  main -> main
+```
+
+
+
