polish published medium essay

--- a/i18n/en/docusaurus-plugin-content-docs/current/02-Frontend/vue route.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/02-Frontend/vue route.mdx
@@ -4,7 +4,7 @@ sidebar_label: use vue-route
 sidebar_position: 6
 ---
 
-# How to use `vue-route` in `vue3` ts project?
+## Prerequisite
 
 **Before Beginning to do use `vue-route`, some requirement needs:**
 
@@ -15,7 +15,6 @@ sidebar_position: 6
 ## Preview Project Structure
 
 ![Project Construction](https://s2.loli.net/2023/12/31/gVRe8YzSbUWxjXO.png)
-
 
 
 ## Install dependencies
@@ -238,18 +237,17 @@ const inputText = ref<string>('hello')
 
 ```
 
-This create a input text element, and bind the data to inputText variable, in the script-setup declare ref object refers to string 'hello'.
+This create a input text element, and bind the data to inputText variable, inside the script-setup tag , declare ref object with generic string type value of ‘hello’.
 
 ## Access
 
-run the project with your script which define in `package.json`, then visit the url, your will see as below picture;
+Run the project with your script which define in `package.json`, then visit the url, your will see as below picture;
 
 ![visited Page](https://s2.loli.net/2023/12/31/ONkqPXf6ejuAgBL.png)
-
 
 
 ## Conclusion
 
 In this user guide, there might be a tendency to make spelling mistakes or encounter issues with commands. It’s advisable to directly copy the commands and paste them into your VS Code terminal. You can download the code from my [GitHub Repository](https://github.com/Halcyon666/taco-shop)
 
-Thank you for your time. If you find value in my article, please give it a clap. Also, feel free to ask any questions you may have.
+Thank you for your time. If my article helps you, please give it a clap. Also feel free to ask any questions you may have.
