--- a/docs/02-Frontend/Integrate husky prettier etc.mdx
+++ b/docs/02-Frontend/Integrate husky prettier etc.mdx
@@ -4,11 +4,7 @@ sidebar_label: integrate husky prettier etc
 sidebar_position: 11
 ---
 
-# Integrate husky prettier etc
-
-*You can use this command to install all the needed dependencies*
-
-> pnpm install husky lint-staged eslint prettier -D
+# How to integrate husky prettier etc in Vue project?
 
 ## Create Project with vite
 
@@ -16,7 +12,11 @@ sidebar_position: 11
 
 ## Install Dependencies
 
-`integrate husky prettier etc`
+```shell
+pnpm install husky lint-staged eslint prettier -D
+```
+
+
 
 ## Configure prettier
 
@@ -46,10 +46,10 @@ The following optional, you can choose the same with me.
 
 run the command `pnpx eslint .` to check eslint rules;
 
-## Install huskey and Configure it
+## Install husky and Configure it
 
 ```shell
-# init hustky 
+# init husty 
 pnpm husky install
 # Configure husky 
 pnpx husky add .husky/pre-commit "pnpm lint-staged"
@@ -95,4 +95,4 @@ This conclude eslint fix code and prettier format code.
 
 ## To the End 
 
-Thanks for your time, If you get something from my article, please give me clap, mean the while, feel free to ask question as you need.
+Thanks for your time, If you get something from my article, please give me clap, meanwhile, feel free to ask question as you need.
