--- a/docs/02-Frontend/tailwind.mdx
+++ b/docs/02-Frontend/tailwind.mdx
@@ -5,19 +5,23 @@ sidebar_position: 12
 description: taco shop project written by tailwind and vue
 ---
 
-#  taco shop project written by tailwind and vue
+# `How to use tailwind in your project?`
 
-*Happy news,You can visit my deploy page [here](https://halcyon666.github.io/taco-shop/)*
+
+
+**All contents base on tailwind `3.4.1`, and this is my [GitHub Repository](https://github.com/Halcyon666/taco-shop).**
+
+**Happy news, You can visit my deploy website [here](https://halcyon666.github.io/taco-shop/)**
 
 ### Prerequisite
 
-- [mdn Cascading Style Sheets](https://developer.mozilla.org/en-US/docs/Web/CSS)
+- [`MDN` Cascading Style Sheets](https://developer.mozilla.org/en-US/docs/Web/CSS)
 
 - [The css course learned from](https://youtu.be/OXGznpKZ_sA?si=KTPSZgU2-h7IHr_d)
 
-- [Official Vue Website](https://vuejs.org/)
+- [Official `Vue` Website](https://vuejs.org/)
 
-- [typescript](https://www.typescriptlang.org/)
+- [TypeScript](https://www.typescriptlang.org/)
 
 ### Learn Background
 
@@ -27,7 +31,7 @@ So this article the summary to record all of the key point, you will get great b
 
 ### Install Tailwind Css
 
-If you wanna initiate a new project, you can read [this](https://halcyon666.github.io/summary/Frontend/Integrate%20husky%20prettier%20etc), then install the tailwind Css by reading [this tutorial](https://tailwindcss.com/docs/guides/vite#vue).
+If you wanna initiate a new project, you can read [this article](https://halcyon666.github.io/summary/Frontend/Integrate%20husky%20prettier%20etc), then install the tailwind Css by reading [this tutorial](https://tailwindcss.com/docs/guides/vite#vue).
 
 Also you can skip all steps above, just execute the following command,
 
@@ -44,13 +48,11 @@ pnpx tailwindcss init -p
 
 ### Tailwind Usage
 
-In this section, First I will give some basic usage, and then focus on tough issues.
+I will skip most simple usage, you can look up in [official site](https://tailwindcss.com).
 
+#### `margin-bottom`
 
-
-#### **margin-bottom**
-
-- custom css
+If you wanna define margin-bottom space, custom definition is below,
 
 ```css
 .mb-4 {
@@ -58,15 +60,9 @@ In this section, First I will give some basic usage, and then focus on tough iss
 }
 ```
 
-```css
-m-[clamp(1em,2.5vh,1.5em)_0] 
-```
+> All essay will omit basic css used in html.
 
-
-
-- tailwind css
-
-Below cases will not show the present tailwind css on the html element.
+the tailwind css,
 
 ```html
 <div class="mb-4">
@@ -74,26 +70,50 @@ Below cases will not show the present tailwind css on the html element.
 </div>
 ```
 
+another more complicated case, if wanna declare a space with a clamp function,this `clamp(1em, 2.5vh, 1.5em) 0` is setting a margin for an element that will vary between `1em` and `1.5em`, with a preference for `2.5vh` and an initial margin of `0`. The actual margin will depend on the viewport size and how it fits within the specified range.
 
+`2.5vh` is equivalent to 2.5% of the viewport height. It's a responsive unit that adjusts based on the height of the user's viewport (the visible area in the browser).
 
-#### text-shadow
+custom css
+
+```css
+.mb-clamp {
+    margin-bottom: clamp(1em, 2.5vh, 1.5em) 0;
+}
+```
+
+tailwind css
+
+```html
+<div class="m-[clamp(1em,2.5vh,1.5em)_0] ">
+      <!--  ... -->
+</div>
+```
+
+#### `text-shadow`
 
 - custom css
 
 ```css
-.my-shadow {
+.custom-shadow {
     text-shadow: 2px 2px 5px #333;
 }
 ```
 
 - tailwind css
 
-#### font-family
+```html
+<div class="[text-shadow:2px_2px_5px_#333]">
+      <!--  ... -->
+</div>
+```
+
+#### `font-family`
 
 If you wanna set font family, custom Css is below 
 
 ```css
-.font-headings {
+.custom-font-family {
     font-family: Fugaz One, cursive;
 }
 ```
@@ -107,7 +127,6 @@ export default {
   theme: {
     extend: {
       fontFamily: {
-        content: ['Nunito', 'sans-serif'],
         headings: ['Fugaz One', 'cursive'],
       },
     },
@@ -116,16 +135,47 @@ export default {
 } satisfies Config
 ```
 
+and use in html,
 
+```html
+<div class="font-headings">
+      <!--  ... -->
+</div>
+```
 
-#### **animate**
+#### `animate`
 
-custom css
+This custom css define a animate, from top `-100px` down the window.
+
+```css
+.hero__h2 {
+    top: -100px;
+    animation: showWelcome 0.5s ease-in-out 1s forwards;
+}
+
+@keyframes showWelcome {
+    0% {
+        top: -20px;
+        transform: skew(0deg, -5deg) scaleY(0);
+    }
+
+    80% {
+        top: 30px;
+        transform: skew(10deg, -5deg) scaleY(1.2);
+    }
+
+    100% {
+        top: 20px;
+        transform: skew(-10deg, -5deg) scaleY(1);
+    }
+}
+```
+
+In tailwind css, you need put config into you `tailwind.config.ts`
 
 ```css
 export default {
-  content: ['./index.html', './src/**/*.{vue,js,ts,jsx,tsx}'],
-  darkMode: 'class',
+  content: ['./index.html', './src/**/*.{vue,js,ts,jsx,tsx}']
   theme: {
     extend: {
       keyframes: {
@@ -152,23 +202,76 @@ export default {
 } satisfies Config
 ```
 
-tail windcss
+use animate in html
 
-#### 
+```html
+<div class="animate-[showWelcome_0.5s_ease-in-out_1s_forwards]">
+      <!--  ... -->
+</div>
+```
+
+#### pseudo `first-child` and `last-child`
+
+custom css
 
 ```css
-animate-[showWelcome_0.5s_ease-in-out_1s_forwards]
+.main__article:first-child {
+    margin-top: 1em;
+}
 
-last:min-h-[calc(100vh-20rem)]
+.main__article:last-child {
+    min-height: calc(100vh-20rem);
+}
+```
 
+tailwind css 
 
-hover:text-black/[.6]
+```html
+<div class="first:mt-4 last:min-h-[calc(100vh-20rem)]">
+      <!--  ... -->
+</div>
 
+```
 
-dark:hover:text-orange-500
+>  *Style an element if it’s the first child of its type using the first-of-type modifier*, you need define this way.
+>
+> ```html
+> <div class="first-of-type:mt-4 last-of-type:min-h-[calc(100vh-20rem)]">
+>       <!--  ... -->
+> </div>
+> ```
+>
+> **and be careful with the function usage, must not contains blank in `last-of-type:min-h-[calc(100vh-20rem)]`, if you really wanna add, just use `last-of-type:min-h-[calc(100vh_-_20rem)]` instead of `last-of-type:min-h-[calc(100vh - 20rem)]`.**
 
+#### pseudo `before` and `after`
 
+use pseudo `before` or `after` custom css add some content, custom css
 
+```css
+.header__h1::before {
+    content: '🌮 '
+}
+
+.header__h1::after {
+    content: ' 🌮'
+}
+```
+
+tailwind `css`
+
+```html
+<div class="before:content-['🌮'] after:content-['🌮']">
+      <!--  ... -->
+</div>
+```
+
+> '🌮' must need single quote** ,🌮 will does not work.
+
+#### `@media` query  
+
+custom css 
+
+```css
 @media screen and (min-width: 576px) {
     .header__h1::before {
         content: '🌮 '
@@ -185,38 +288,113 @@ dark:hover:text-orange-500
         font-size: 125%;
     }
 }
-'🌮' must need single quote
-min-[576px]:before:content-['🌮'] min-[576px]:after:content-['🌮']
+```
 
-text-shadow: 2px 2px 5px var(--BORDER-COLOR);
-[text-shadow:2px_2px_5px_#333] dark:[text-shadow:2px_2px_5px_white]
+use in tailwind css
+
+```html
+<div class="min-[576px]:before:content-['🌮'] min-[576px]:after:content-['🌮']">
+      <!--  ... -->
+</div>
+```
+
+It look more concise, I like this.
+
+#### text color opacity
+
+directly use `text-black/[.6]` instead of `text-[rgba(0, 0, 0, 0.6)]`, because it doesn't support yet. 
+
+If the color is `rgba(52, 178, 52, 0.75)`,first you should convert it to hex color, then use `text-[#34b234bf]`.
+
+Here give a example, custom css
+
+```css
+.header__h1 {
+    color: rgba(52, 178, 52, 0.75);
+}
+```
+
+tailwind css
+
+```html
+<div class="text-[#34b234bf]">
+      <!--  ... -->
+</div>
+```
 
 
-box-shadow: 0 6px 5px -5px var(--BORDER-COLOR);
-shadow-[0_0_10px_#333] dark:shadow-[0_0_10px_whitesmoke]
 
+#### `text-shadow`
 
-shadow-[0_6px_5px_-5px_rgba(0,0,0,0.3)] dark:shadow-[0_6px_5px_-5px_rgba(255,255,255,0.3)]
+custom css,
 
-use text-[rgba(0, 0, 0, 0.6)] not support, instead of text-black/[.6] 
-if the color is rgba(52, 178, 52, 0.75), only can use text-[#34b234bf]
+```css
+:root {
+    --BORDER-COLOR: #333;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --BORDER-COLOR: whitesmoke;
+    }
+}
+
+.hero__h2 {
+    text-shadow: 2px 2px 5px var(--BORDER-COLOR);
+}
+```
+
+tailwind css,
+
+```html
+<div class="[text-shadow:2px_2px_5px_#333] dark:[text-shadow:2px_2px_5px_white]">
+      <!--  ... -->
+</div>
+```
+
+#### `box-shadow`
+
+custom css
+
+```css
+:root {
+    --BORDER-COLOR: #333;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --BORDER-COLOR: whitesmoke;
+    }
+}
+
+body {
+    box-shadow: 0 0 10px var(--BORDER-COLOR);
+}
+```
+
+tailwind css,
+
+```html
+<div class="shadow-[0_6px_5px_-5px_#333] dark:shadow-[0_6px_5px_-5px__whitesmoke]">
+      <!--  ... -->
+</div>
 ```
 
 
 
 ### Problems Fix
 
-1. Picture not display
+##### Picture not display
 
-I used static picture in my vue file, Once I deploy to github page picture disappear, because `vite` don't include the png in `src/assets/img/tacos_delicioso_1000x667.png`, I check the solution on the [vite official website](https://vitejs.dev/guide/assets.html), both of this ways below works, just choose one you prefer. [Here](https://github.com/Halcyon666/taco-shop/commit/ae52cfc97ea40a73a5a32e9fd86ed971cb535ebf) is solution of commit change.
+I used static picture in my vue file, once I deploy to github page picture disappear, because `vite` don't include the png in `src/assets/img/tacos_delicioso_1000x667.png`, I check the solution on the [vite official website](https://vitejs.dev/guide/assets.html), both of this ways below works, just choose one you prefer. [Here](https://github.com/Halcyon666/taco-shop/commit/ae52cfc97ea40a73a5a32e9fd86ed971cb535ebf) is solution of commit change.
 
-- First
+- First method
 
 ```ts
 const img = new URL('@/assets/img/tacos_delicioso_1000x667.png', import.meta.url).href
 ```
 
-- seconde
+- Second method
 
 ```ts
 // but this will get a error hint, so I prefer to the first method
@@ -224,13 +402,13 @@ const img = new URL('@/assets/img/tacos_delicioso_1000x667.png', import.meta.url
 import img from '@/assets/img/tacos_delicioso_1000x667.png'
 ```
 
-2. My page loss all the styles
+##### My page lost all the styles
 
 Because of making mistake in `postcss.config.js`, I delete the line `tailwindcss: { config: './tailwind.config.ts' },`;
 
-You can see the official [guide](https://tailwindcss.com/docs/configuration#creating-your-configuration-file)
+You can see the official [guide](https://tailwindcss.com/docs/configuration#creating-your-configuration-file), [Here](https://github.com/Halcyon666/taco-shop/commit/4a136de832103a85edee410b3847ffafefd76b5f) is solution of commit change.
 
-```js
+```js {4} showLineNumbers
 module.exports = {
   plugins: {
     // config location, defaullt is tailwind.config.js,here must indicate the file name
@@ -249,3 +427,10 @@ module.exports = {
 
 ```
 
+### Conclusion
+
+Almost 20-days learning and rewriting this project, maybe the project is too small, but I have learned a lot about tailwind css, vue acknowledge. I wish you move on, you will find unlock fashioned tailwind css.
+
+
+
+Thank you for your time. If my article helps you, please give it a clap. Also feel free to ask any questions you may have.
