--- a/docs/02-Frontend/tailwind.mdx
+++ b/docs/02-Frontend/tailwind.mdx
@@ -5,7 +5,7 @@ sidebar_position: 12
 description: taco shop project written by tailwind and vue
 ---
 
-# `How to use tailwind in your project?`
+# `How to use tailwind css in your project?`
 
 
 
