--- a/docs/02-Frontend/tailwind.mdx
+++ b/docs/02-Frontend/tailwind.mdx
@@ -25,7 +25,7 @@ description: taco shop project written by tailwind and vue
 
 ### Learn Background
 
-First I learned a basic [css course](https://youtu.be/OXGznpKZ_sA?si=KTPSZgU2-h7IHr_d) given by ***\*Dave Gray\****(Thanks for you), second the thought throw out when I learning, I can rewrite this by other technology that html replace by vue and ts, css replace by tailwind css. 
+First I learned a basic [css course](https://youtu.be/OXGznpKZ_sA?si=KTPSZgU2-h7IHr_d) given by ***Dave Gray***(Thanks for you), second the thought throw out when I learning, I can rewrite this by other technology that html replace by vue and ts, css replace by tailwind css. 
 
 So this article the summary to record all of the key point, you will get great beneficial from here.
 
