--- a/docs/02-Frontend/doc-search-docusaurus.mdx
+++ b/docs/02-Frontend/doc-search-docusaurus.mdx
@@ -21,7 +21,7 @@ Firstly I checked the crawler admin [https://crawler.algolia.com/](https://crawl
 
 I try search in the Preview Search, There is not a result about my markdown blogs except homepage informations.
 
-![image-20240202002105462](C:/Users/jackc/AppData/Roaming/Typora/typora-user-images/image-20240202002105462.png)
+![image-20240202002105462](https://s2.loli.net/2024/02/02/eM7Vc45PLlyGJYw.png)
 
 
 you can see my correct configuration above, and the wrong configuration below, in this case solve the scrawler ignore problems.
