add problems solution

--- a/docs/10-Others/01-Windowns/software-use-case.mdx
+++ b/docs/10-Others/01-Windowns/software-use-case.mdx
@@ -18,3 +18,8 @@ sidebar_position: 4
 
 删除以上目录中的 `idea211.evaluation.key`
 
+
+
+## 浏览HEIC图片工具
+
+[copytrans](https://copytrans.studio/copytrans-heic-is-now-part-of-copytrans-studio/)
