--- a/docs/02-Frontend/pnpm.mdx
+++ b/docs/02-Frontend/pnpm.mdx
@@ -48,6 +48,6 @@ Problems
 
  `GET https://registry.npm.taobao.org/pnpm error (CERT_HAS_EXPIRED). Will retry in 10 seconds. 2 retries left.`
 
-![image-20240306220912703](D:/summary/docs/02-Frontend/assets/image-20240306220912703.png)
+![image.png](https://s2.loli.net/2024/03/06/F5OPANkdLpwbD8z.png)
 
 Just delete the directory,display on the console `C:\Users\xx\AppData\Local\pnpm`
