--- a/docs/10-Others/01-Windowns/software-use-case.mdx
+++ b/docs/10-Others/01-Windowns/software-use-case.mdx
@@ -26,7 +26,7 @@ sidebar_position: 4
 
 
 
-### PicGo 上传图片问题
+## PicGo 上传图片问题
 
 当使用PicGo(app) 或者 PicList时，出现如下报错 `"message": "getaddrinfo ENOTFOUND smms",` 
 
