--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -94,5 +94,9 @@
   "sidebar.tutorialSidebar.category.CnblogsThemeConfiguration": {
     "message": "CnblogsThemeConfiguration",
     "description": "The label for category CnblogsThemeConfiguration in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.AI And BD": {
+    "message": "AI And BD",
+    "description": "The label for category AI And BD in sidebar tutorialSidebar"
   }
 }
