--- a/docs/01-Java/03-ProblemSummary/Java problems.mdx
+++ b/docs/01-Java/03-ProblemSummary/Java problems.mdx
@@ -302,15 +302,98 @@ boolean 改为Boolean值，某些场景（netty 不响应请求)会有问题
 
 
 
-:::tip 协议
 
-- 本作品代码部分采用 [Apache 2.0协议](https://www.apache.org/licenses/LICENSE-2.0)进行许可。遵循许可的前提下，你可以自由地对代码进行修改，再发布，可以将代码用作商业用途。但要求你：
-  - **署名**：在原有代码和衍生代码中，保留原作者署名及代码来源信息。
-  - **保留许可证**：在原有代码和衍生代码中，保留Apache 2.0协议文件。
 
-- 本作品文档部分采用[知识共享署名 4.0 国际许可协议](http://creativecommons.org/licenses/by/4.0/)进行许可。 遵循许可的前提下，你可以自由地共享，包括在任何媒介上以任何形式复制、发行本作品，亦可以自由地演绎、修改、转换或以本作品为基础进行二次创作。但要求你：
-  - **署名**：应在使用本文档的全部或部分内容时候，注明原作者及来源信息。
-  - **非商业性使用**：不得用于商业出版或其他任何带有商业性质的行为。如需商业使用，请联系作者。
-  - **相同方式共享的条件**：在本文档基础上演绎、修改的作品，应当继续以知识共享署名 4.0国际许可协议进行许可。
+### org.springframework.jdbc.UncategorizedSQLException
 
-:::
+Servlet.service() for servlet [dispatcherServlet] in context with path [] threw exception 
+[Request processing failed; nested exception is org.springframework.jdbc.UncategorizedSQLException: x.xx.x.insert
+ (batch index #1) failed. Cause: java.sql.BatchUpdateException: The MySQL server is running with the --read-only 
+ option so it cannot execute this statement; uncategorized SQLException; SQL state [HY000]; error code [1290]; 
+ The MySQL server is running with the --read-only option so it cannot execute this statement; nested exception 
+ is java.sql.BatchUpdateException:
+
+
+solution:
+
+the error configuration, the url miss connect port, mislead phonomenone sometimes maybe right, sometimes occurs error above.
+
+
+
+### fetch all the data once but not paginate.
+
+the relative code below,
+
+```java
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+import java.util.List;
+
+@Service
+public class DataMigrationService {
+   @Autowired
+   private SourceEntityMapper sourceEntityMapper;
+   @Autowired
+   private TargetEntityMapper targetEntityMapper;
+   public void migrateData() {
+       int pageSize = 100;  // Adjust the page size according to your needs
+       int currentPage = 1;
+       while (true) {
+           // Fetch data from the source database in chunks using MyBatis Plus
+           List<SourceEntity> sourceEntities = sourceEntityMapper.selectPage(
+                   new Page<>(currentPage, pageSize),
+                   new QueryWrapper<>()
+           ).getRecords();
+
+           if (sourceEntities.isEmpty()) {
+               break;  // No more data to fetch
+           }
+           // Process and insert data into the target database
+           processAndInsertData(sourceEntities);
+           currentPage++;
+       }
+   }
+
+   private void processAndInsertData(List<SourceEntity> sourceEntities) {
+       List<TargetEntity> targetEntities = convertToTargetEntities(sourceEntities);
+       // Batch insert into the target database using MyBatis Plus
+       targetEntityMapper.insertBatchSomeColumn(targetEntities);
+   }
+
+
+
+   private List<TargetEntity> convertToTargetEntities(List<SourceEntity> sourceEntities) {
+       // Implement logic to convert SourceEntity to TargetEntity
+       // ...
+       return targetEntities;
+   }
+
+}
+```
+
+solution:
+
+when you want migrate the data paginate and you need config this bean.
+
+```java
+@Bean
+public MybatisPlusInterceptor mybatisPlusInterceptor() {
+   MybatisPlusInterceptor interceptor = new MybatisPlusInterceptor();
+   interceptor.addInnerInterceptor(new PaginationInnerInterceptor(DbType.ORACLE));
+   return interceptor;
+} 
+```
+
+### validated not work in groups 
+
+solution 
+
+1. write check annotation in entity
+2. write @Validated(Group1.class)
+3. write @Valid before the parameter which you wanna check 
+
+>  Do not use one more check in one class
+
+
