添加mybatis plus代码生成

--- a/docs/01-Java/08-middleware/Kafka.mdx
+++ b/docs/01-Java/08-middleware/Kafka.mdx
@@ -77,7 +77,7 @@ services:
 
 调整外部连接地址即可解决问题
 
-```java
+```log
 [| adminclient-1] org.apache.kafka.clients.NetworkClient : [AdminClient clientId=adminclient-1] Connection to node 1 (/127.0.0.1:9092) could not be established. Broker may not be available.
 ```
 
